modified readme and jvm memory amount